syntax = "proto3";

package pb;



//The WalletKey service definition.
service WalletKey {
 rpc GenerateMnemonic (GenerateMnemonicRequest) returns (GenerateMnemonicReply);
}

message GenerateMnemonicRequest {
 string uuid  = 1;
 string email = 2;
}

message GenerateMnemonicReply {
 string xpub = 1;
}

